--- a/style.css
+++ b/style.css
@@ -1039,10 +1039,12 @@ footer {
     justify-content: center;
     right: 30px;
     bottom: 30px;
+    cursor: pointer;
 }
 
 .scroll-top img {
     width: 80%;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 1280px) {
@@ -1147,6 +1149,11 @@ footer {
 }
 
 @media screen and (max-width: 840px) {
+
+    #search {
+        width: 260px;
+    }
+
     .nav-item-wrapper {
         display: none;
     }
